[package]
name = "shopping-cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
redis = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"